NXP-30081: adapt idempotent request filter code to 10.10